feat: crud task in service & handler
