# internal/application/dto/task_dto.go
@@ -27,6 +27,14 @@ type CreateTaskRequest struct {
 	EndDay    string `json:"endDay" binding:"required" example:"2001-12-31"`
 }
 
+type UpdateTaskRequest struct {
+	Title     string `json:"title" binding:"required,range=3-200" example:"Update Task"`
+	StatusID  string `json:"statusId" binding:"required,uuid" example:"5259ac80-1823-44d1-a701-0ed1e36fb38c"`
+	StartDay  string `json:"startDay" binding:"required" example:"2001-12-31"`
+	TargetDay string `json:"targetDay" binding:"required" example:"2001-12-31"`
+	EndDay    string `json:"endDay" binding:"required" example:"2001-12-31"`
+}
+
 type UpdateTaskStatusRequest struct {
 	ID       string `json:"id" binding:"required,uuid" example:"5259ac80-1823-44d1-a701-0ed1e36fb38c"`
 	StatusID string `json:"statusId" binding:"required,uuid" example:"5259ac80-1823-44d1-a701-0ed1e36fb38c"`
